--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
-	<link rel="stylesheet" href="style.css">
+	<meta charset="utf-8">
+	<title>Untitled Document</title>
+	
+	<!-- add CSS -->
+	<!-- bootstrap 3.3.7-->
+	<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <!-- font-awesome 4.6.3 -->
+  <link href="css/font-awesome/font-awesome.min.css" rel="stylesheet" type="text/css">
+	
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 	<div class="page-image"></div>
 	
 	<div id="coming-soon">
-    <div class="logo"><img src="img/Монтажная область 1.png" alt=""></div>
+    <div class="logo">
+			<img src="img/logo.png" alt="">
+		</div>
+		<h1>Очень скоро мы&nbsp;запустим наш сайт:)</h1>	
+		<div class="contacts">
+												
+		</div>
+		<div class="social-media-links">
+			<p>
+				<a href="#" class="link-white"><i class="fa fa-vk"></i></a>
+				<a href="#" class="link-white"><i class="fa fa-facebook"></i></a>
+				<a href="#" class="link-white"><i class="fa fa-twitter"></i></a>
+				<a href="#" class="link-white"><i class="fa fa-google-plus"></i></a>
+				<a href="#" class="link-white"><i class="fa fa-behance"></i></a>
+			</p>
+		</div>
+		
 	</div>
 </body>
 </html>
