--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
 	<div class="page-image"></div>
+	<div class="section-overlay bg-black overlay-opacity"></div>
 	
 	<div id="coming-soon">
     <div class="logo">
