--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Untitled Document</title>
+	<title>СВОИ</title>
+	
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	
+	<meta name="viewport" content="minimum-scale=1.0, target-densitydpi=device-dpi, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="HandheldFriendly" content="true">
+	<meta name="MobileOptimized" content="320">
 	
 	<!-- add CSS -->
 	<!-- bootstrap 3.3.7-->
@@ -11,6 +17,9 @@
   <link href="css/font-awesome/font-awesome.min.css" rel="stylesheet" type="text/css">
 	
 	<link rel="stylesheet" href="css/style.css">
+	
+	<script src="https://use.typekit.net/vci3qkx.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 
 <body>
@@ -22,8 +31,9 @@
 			<img src="img/logo.png" alt="">
 		</div>
 		<h1>Очень скоро мы&nbsp;запустим наш сайт:)</h1>	
-		<div class="contacts">
-												
+		<div class="contacts text-center">
+			<a href="tel:88005553395" rel="nofollow">8 800 555 33 95</a> <br>
+			<a href="mailto:sale@svoi.group">sale@svoi.group</a>
 		</div>
 		<div class="social-media-links">
 			<p>
